--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/2.3.3/purify.min.js"></script>
     <script src="scripts/index.js"></script>
+    <link rel="stylesheet" href="css/style.css">
     <title>Markdown-Editor</title>
 </head>
 <body>
     <center><h5>Markdown-Editor</h5></center>
     <div id="editor">
         <textarea id="markdown-content"></textarea>
-        <div id="preview-content"></div>      
+        <div id="preview-content"></div> 
     </div>
 </body>
 </html>
