Update CSS style

--- a/index.html
+++ b/index.html
@@ -10,8 +10,25 @@
     <title>Markdown-Editor</title>
 </head>
 <body>
-    <center><h5>Markdown-Editor</h5></center>
+    <nav>
+        <ul>
+            <li>Markdown-Editor</li>
+        </ul>
+    </nav>
     <div id="editor">
+        <div id="component-block">
+            <div id="added-component-block">
+                <ul>
+                    <li>Section 1</li>
+                </ul>
+            </div>
+            <div id="new-component-block">
+                <ul>
+                    <li>Section 1</li>
+                    <li>Section 2</li>
+                </ul>
+            </div>
+        </div>
         <textarea id="markdown-content"></textarea>
         <div id="preview-content"></div> 
     </div>
