--- a/index.html
+++ b/index.html
@@ -18,15 +18,13 @@
     <div id="editor">
         <div id="component-block">
             <div id="added-component-block">
-                <ul>
-                    <li>Section 1</li>
-                </ul>
+                <div class="list" draggable="true"><img src="images/icon_1.png" alt="Icon">Section 1</div>
+                <div class="list" draggable="true"><img src="images/icon_1.png" alt="Icon">Section 2</div>
+                <div class="list" draggable="true"><img src="images/icon_1.png" alt="Icon">Section 3</div>
             </div>
             <div id="new-component-block">
-                <ul>
-                    <li>Section 1</li>
-                    <li>Section 2</li>
-                </ul>
+                <div class="list" draggable="true"><img src="images/icon_1.png" alt="Icon">Section 4</div>
+                <div class="list" draggable="true"><img src="images/icon_1.png" alt="Icon">Section 5</div>
             </div>
         </div>
         <textarea id="markdown-content"></textarea>
