Modify style and add a component logic

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/2.3.3/purify.min.js"></script>
+    <script src="scripts/Description.js"></script>
     <script src="scripts/index.js"></script>
     <link rel="stylesheet" href="css/style.css">
     <title>Markdown-Editor</title>
@@ -12,19 +13,19 @@
 <body>
     <nav>
         <ul>
-            <li>Markdown-Editor</li>
+            <li><img src="images/logo.png"></li>
         </ul>
     </nav>
     <div id="editor">
         <div id="component-block">
             <div id="added-component-block">
-                <div class="list" draggable="true"><img src="images/icon_1.png" alt="Icon">Section 1</div>
-                <div class="list" draggable="true"><img src="images/icon_1.png" alt="Icon">Section 2</div>
-                <div class="list" draggable="true"><img src="images/icon_1.png" alt="Icon">Section 3</div>
+                <div class="list" draggable="true"><img src="images/icon_1.svg" alt="Icon">Section 1</div>
+                <div class="list" draggable="true"><img src="images/icon_1.svg" alt="Icon">Section 2</div>
+                <div class="list" draggable="true"><img src="images/icon_1.svg" alt="Icon">Section 3</div>
             </div>
             <div id="new-component-block">
-                <div class="list" draggable="true"><img src="images/icon_1.png" alt="Icon">Section 4</div>
-                <div class="list" draggable="true"><img src="images/icon_1.png" alt="Icon">Section 5</div>
+                <div class="list" draggable="true"><img src="images/icon_1.svg" alt="Icon">Section 4</div>
+                <div class="list" draggable="true"><img src="images/icon_1.svg" alt="Icon">Section 5</div>
             </div>
         </div>
         <textarea id="markdown-content"></textarea>
