Modify style and add favicon

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/2.3.3/purify.min.js"></script>
     <script src="scripts/Description.js"></script>
@@ -19,11 +20,13 @@
     <div id="editor">
         <div id="component-block">
             <div id="added-component-block">
+                <p>Click on a section below to edit the contents</p>
                 <div class="list" draggable="true"><img src="images/icon_1.svg" alt="Icon">Section 1</div>
                 <div class="list" draggable="true"><img src="images/icon_1.svg" alt="Icon">Section 2</div>
                 <div class="list" draggable="true"><img src="images/icon_1.svg" alt="Icon">Section 3</div>
             </div>
             <div id="new-component-block">
+                <p>Click on a section below to add it to your readme</p>
                 <div class="list" draggable="true"><img src="images/icon_1.svg" alt="Icon">Section 4</div>
                 <div class="list" draggable="true"><img src="images/icon_1.svg" alt="Icon">Section 5</div>
             </div>
