Add Monaco Editor

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/2.3.3/purify.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.23.0/min/vs/loader.min.js"></script>
     <script src="scripts/Title&Description.js"></script>
     <script src="scripts/Acknowledgement.js"></script>
     <script src="scripts/ApiReference.js"></script>
@@ -80,7 +81,7 @@
         </div>
         <div class="editor-container">
             <p class="label">Editor</p>
-            <textarea id="markdown-content"></textarea>
+            <div id="markdown-content"></div>
         </div>
         <div class="preview-container">
             <p class="label">Preview</p>
