--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/2.3.3/purify.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.23.0/min/vs/loader.min.js"></script>
-    <script src="scripts/Title&Description.js"></script>
-    <script src="scripts/Acknowledgement.js"></script>
-    <script src="scripts/ApiReference.js"></script>
-    <script src="scripts/Appendix.js"></script>
-    <script src="scripts/Authors.js"></script>
+    <script src="components/Title&Description.js"></script>
+    <script src="components/Acknowledgement.js"></script>
+    <script src="components/ApiReference.js"></script>
+    <script src="components/Appendix.js"></script>
+    <script src="components/Authors.js"></script>
     <script src="scripts/index.js"></script>
     <link rel="stylesheet" href="css/style.css">
     <title>Markdown-Editor</title>
