--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
             <div id="new-component-block">
                 <p>Click on a section below to add it to your readme</p>
-                <div class="list" draggable="true">
+                <div class="list" draggable="true" id="acknowledgement" role="button" onclick="selectedSection(this.id)">
                     <img src="images/icon_1.svg" alt="Icon">
                     <div class="text">Acknowledgement</div>
                     <div class="icon-container">
@@ -45,7 +45,7 @@
                         <img class="remove" src="images/icon_2.svg" alt="Remove">
                     </div>
                 </div>
-                <div class="list" draggable="true">
+                <div class="list" draggable="true" id="appendix" role="button" onclick="selectedSection(this.id)">
                     <img src="images/icon_1.svg" alt="Icon">
                     <div class="text">Appendix</div>
                     <div class="icon-container">
@@ -53,7 +53,7 @@
                         <img class="remove" src="images/icon_2.svg" alt="Remove">
                     </div>
                 </div>
-                <div class="list" draggable="true">
+                <div class="list" draggable="true" id="authors" role="button" onclick="selectedSection(this.id)">
                     <img src="images/icon_1.svg" alt="Icon">
                     <div class="text">Authors</div>
                     <div class="icon-container">
@@ -61,7 +61,7 @@
                         <img class="remove" src="images/icon_2.svg" alt="Remove">
                     </div>
                 </div>
-                <div class="list" draggable="true">
+                <div class="list" draggable="true" id="apiReference" role="button" onclick="selectedSection(this.id)">
                     <img src="images/icon_1.svg" alt="Icon">
                     <div class="text">API Reference</div>
                     <div class="icon-container">
@@ -69,7 +69,7 @@
                         <img class="remove" src="images/icon_2.svg" alt="Remove">
                     </div>
                 </div>
-                <div class="list" draggable="true">
+                <div class="list" draggable="true" id="title&description" role="button" onclick="selectedSection(this.id)">
                     <img src="images/icon_1.svg" alt="Icon">
                     <div class="text">Title and Description</div>    
                     <div class="icon-container">
